# wave-to-txt

./: .gitignore  README.md  database_schema_supabase.sql  debug_history_auth.py  docker-compose.yml  env.template  fix_current_user_id_security.sql  fix_function_security.sql  package-lock.json  package.json  switch_to_standard_optimization.sql  ultra_optimized_rls.sql
app/: globals.css  layout.tsx  page.tsx
app/api/transcribe/: route.ts
backend/: .dockerignore  Dockerfile  HISTORY_SETUP.md  main.py  pyproject.toml  validate_env.py
backend/core/: config.py  document_processor.py  logging_config.py  r2_client.py  rag_engine.py  redis_client.py  summarizer.py  supabase_client.py  vector_store.py
backend/routers/: chat.py  history.py  history_fixed.py  transcription.py
backend/worker/: celery_app.py  rag_tasks.py  tasks.py
components/: audio-upload-form.tsx  mode-toggle.tsx
frontend/: AUTHENTICATION_SETUP.md  Dockerfile  env.template  frontend-repomix-output.txt  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: apiClient.ts  client.ts  history.ts  transcription.ts
frontend/src/components/: DarkModeToggle.css  DarkModeToggle.tsx  FileUpload.css  FileUpload.tsx  Header.css  Header.tsx  LoadingSpinner.css  LoadingSpinner.tsx  TranscribeButton.css  TranscribeButton.tsx  TranscriptEditor.css  TranscriptEditor.tsx  TranscriptResult.css  TranscriptResult.tsx  TranscriptionOptions.css  TranscriptionOptions.tsx
src/components/: Header.tsx
src/hooks/: useDarkMode.ts
(+18 files in other folders)
