[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.35",
    "celery[redis]>=5.3.1",
    "fastapi[standard]>=0.115.12",
    "groq>=0.26.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "requests>=2.32.4",
]
